@@ -20,7 +20,8 @@
 
 <ul>
  <li> New functions: <a href="libstddjb/djbunix.html">execvep_loose()</a>,
-<tt>byte_zzero()</tt> </li>
+<tt>byte_zzero()</tt>, <a href="libstddjb/djbunix.html">openb_read()</a>,
+<tt>sig_scan()</tt>, <tt>sig0_scan</tt> </li>
  <li> New family of functions: <a href="libdatastruct/genqdyn.html">skalibs/genqdyn.h</a> </li>
 </ul>
 
