@@ -3,6 +3,7 @@
 #ifndef SIG_H
 #define SIG_H
 
+#include <sys/types.h>
 #include <signal.h>
 #include <skalibs/gccattributes.h>
 
@@ -45,5 +46,7 @@ extern void sig_unshield (void) ;
 
 extern char const *sig_name (int) ;
 extern int sig_number (char const *) ;
+extern size_t sig_scan (char const *, int *) ;
+extern size_t sig0_scan (char const *, int *) ;
 
 #endif
